--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <header>
-        <span class="name">Josh McMillan</span>
+        <span class="name">Josh McMillan!</span>
         <nav class="links">
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
