finishing project touches

--- a/about.html
+++ b/about.html
@@ -1,40 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
     <title>About Me</title>
     <style>
-        body{
-            background-image: url(wood.jpg);
-            height: 100vh;
-            background-size: cover;
-            background-position: center;
-         }
+      body {
+        background-image: url(woodbackground.jpg);
+        height: 100vh;
+        background-size: cover;
+        background-position: center;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <span class="name">Josh McMillan!</span>
-        <nav class="links">
-            <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="portfolio.html">Portfolio</a>
-         </nav>
-            </header>
+      <span class="name">Josh McMillan</span>
+      <nav class="links">
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="portfolio.html">Portfolio</a>
+      </nav>
+    </header>
 
-        
-        <div class="box-1">
-        <h1>I like to stay active mentally & physically, here are some things about me!</h1>
-        <h2>Sports<div> <img src="sports.jpg" alt="sports"></div></h2> 
-        <p>Sports are very big with my friends and family!
-        Im always playing or watching sports and its such a good
-        way to stay involved with community and meeting new people
-        and making connections!
-        </p>
-
+    <h1>
+      I like to stay active mentally & physically, here are some things about
+      me!
+    </h1>
+    <h2>
+      Sports
+    </h2>
+    <div class="box-1">
+        <div><img src="sports.jpg" alt="sports" /></div>
+      <p>
+        Sports are very big with my friends and family! Im always playing or
+        watching sports and its such a good way to stay involved with community
+        and meeting new people and making connections!
+      </p>
     </div>
-</body>
+
+    <h2>
+      Faith
+    </h2>
+    <div class="box-2">
+        <p>
+            My entire life has been driven by my faith in God and I would not be
+            where I am without Him! I continually strive to live like Christ and let
+            His kindness shine through me.
+        </p>
+        <div><img src="cross.jpg" alt="cross" /></div>
+    </div>
+  </body>
 </html>
