--- a/portfolio.html
+++ b/portfolio.html
@@ -1,12 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <title>My Portfolio</title>
+
+    <style>
+      body {
+        background-image: url(woodbackground.jpg);
+        height: 100vh;
+        background-size: cover;
+        background-position: center;
+      }
+    </style>
+  </head>
+  <body>
+    <header>
+      <span class="name">Josh McMillan</span>
+      <nav class="links">
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="portfolio.html">Portfolio</a>
+      </nav>
+    </header>
+    <main>
+      <h1>A few projects with more to come!</h1>
+      <section class="project1">
+        <h2 class="project-one">Project One</h2>
+        <div><img src="stadium.jpg" alt="stadium1" /></div>
+        <p>
+          Worked on a few stadium designs for multiple sports teams while
+          getting a lot of credibility that helped the future.
+        </p>
+      </section>
+
+      <h2>Project 2</h2>
+
+      <div>
+        <p>
+          Did many projects with nature companys that spread a positive message!
+        </p>
+        <div><img src="woods.jpg" alt="nature" /></div>
+      </div>
+    </main>
+  </body>
 </html>
