--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Josh McMillan</title>
     <style>
         body{
-            background-image: url(wood.jpg);
+            background-image: url(woodbackground.jpg);
             height: 100vh;
             background-size: cover;
             background-position: center;
@@ -33,11 +33,11 @@
     </h3>
     </main>
     <footer>
-        <a href="https://facebook.com" target="_blank"></a>
-
+        
 
 
     </footer>
     
 </body>
+<script src="javascript.js"></script>
 </html>
